--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -699,7 +699,27 @@
                 <div data-i18n="Documentation">Crew Planner</div>
               </a>
             </span>
+            <li class="d-flex justify-content-center align-items-center m-4">
+              <a class="dropdown-item btn text-danger text-center" id="logout">
+                                        <i class="bx bx-power-off me-0 "></i>
+                <span class="align-middle">Log Out</span>
+              </a>
+            </li>
+           
+            </li>
+            </li>
+            </li>
+            </li>
+              </li>
+              </li>
+            </li>
+            </li>
+            </li>
+            </li>
           </ul>
+              
+            
+         
         </aside>
         <!-- / Menu -->
 
@@ -752,67 +772,16 @@
               
               <!-- /Search -->
 
-              <ul class="navbar-nav flex-row align-items-center ms-auto">
-                <!-- Place this tag where you want the button to render. -->
-                 <!-- <li class="nav-item lh-1 me-3">
-                  <a
-                    class="github-button"
-                    href="https://github.com/themeselection/sneat-html-admin-template-free"
-                    data-icon="octicon-star"
-                    data-size="large"
-                    data-show-count="true"
-                    aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
-                    >Star</a
-                  >
-                </span>
-
-                   User -->
-                <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                  <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online rounded-circle d-flex justify-content-center align-items-center" id="user-avatar">
+              <span>
+                <a class="dropdown-item" href="#">
+                  <div class="d-flex">
+                    <div class="flex-grow-1">
+                      <span class="fw-semibold d-block fw-bolder text-primary" id="user_name"></span>
+                      <small class="text-muted"><span id="user-group"></span></small>
                     </div>
+                  </div>
                 </a>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                    <span>
-                      <a class="dropdown-item" href="#">
-                        <div class="d-flex">
-                          <div class="flex-shrink-0 me-3">
-                            <div class="avatar avatar-online rounded-circle text-center pt-2" id="user-avatar1">
-                                <span class="initials" ></span> <!-- Insert initials here -->
-                            </div>
-                        </div>
-                          <div class="flex-grow-1">
-                            <span class="fw-semibold d-block fw-bolder text-primary" id="user_name"></span>
-                            <small class="text-muted"><span id="user-group"></span></small>
-                          </div>
-                        </div>
-                      </a>
-                    </span>
-                    <span>
-                      <div class="dropdown-divider"></div>
-                    </span>
-                    <span>
-                      <a class="dropdown-item" href="./profile.html">
-                        <i class="bx bx-user me-2"></i>
-                        <span class="align-middle">My Profile</span>
-                      </a>
-                    </span>
-                     
-                      </a>
-                    </span>
-                    <span>
-                      <div class="dropdown-divider"></div>
-                    </span>
-                    <span>
-                      <a class="dropdown-item" id="logout" href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">
-    <i class="bx bx-power-off me-2"></i>
-   <span class="align-middle">Log Out</span>
-</a>
-                    </span>
-                    <span>
-                      
-                    </span>
-                  </ul>
+              </span>
                 </span>
                 <!--/ User -->
               </ul>
@@ -845,10 +814,10 @@
                 <div class="container-fluid">
               
                   <!-- Add spinner markup -->
-                  <div id="spinner" class="spinner-overlay">
+                  <!-- <div id="spinner" class="spinner-overlay">
                     <div class="spinner"></div>
                     <p class="loading-message">Loading..</p>
-                  </div>
+                  </div> -->
                   
                   <div style=''>
                   <div class="card mt-3"> 
