--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -918,37 +918,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-body pb-0 pt-2">
-                            <div class="row">
-                                <div class="col-md-6 mb-0">
-                                    <div class="form-floating">
-                                        <input
-                                            type="file"
-                                            class="form-control"
-                                            id="candidate_photos"
-                                            placeholder="Field X"
-                                            aria-describedby="fieldX_1_Help"
-                                            required
-                                        />
-                                        <label for="candidate_photos">Photo</label>
-                                    </div>
-                                </div>
-        
-                                <div class="col-md-6 mb-0">
-                                    <div class="form-floating">
-                                        <input
-                                            type="file"
-                                            class="form-control"
-                                            id="candidate_resume"
-                                            placeholder="Field X"
-                                            aria-describedby="fieldX_2_Help"
-                                            required
-                                        />
-                                        <label for="candidate_resume">Resume</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        
                         
                         <div class="card-body pb-0 pt-2 mt-2">
                             <div class="row">
@@ -1185,6 +1155,43 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="card-body pb-0 pt-2">
+                          <div class="ms-2 ps-1 mt-3">
+                            <div class="d-flex flex-wrap"> <!-- Flex container -->
+                                <div class="col-md-6 mb-3">
+                                    <div class="row">
+                                       
+                                        <div class="col-md-11 border rounded-3 p-3">
+                                            <div class="form-floating">
+                                                <input type="file" class="form-control" id="photoInput" required>
+                                                <label for="photoInput">Choose Photo</label>
+                                            </div>
+                                            <button id="uploadPhotoBtn" class="btn btn-primary mt-3">Upload Photo</button>
+                                      
+                                        </div>
+                                       
+                                          
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <div class="row">
+                          
+                                        <div class="col-md-12 border rounded-3 p-3">
+                                            <div class="form-floating">
+                                                <input type="file" class="form-control" id="resumeInput" required>
+                                                <label for="resumeInput">Choose Resume</label>
+                                            </div>
+                                            <button id="uploadResumeBtn" class="btn btn-primary mt-3">Upload Resume</button>
+
+                                        </div>
+                                        
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         </div>
                         <input type="hidden" placeholder="Enter created by" id="candidate_created_by" required>
                         <input type="hidden" placeholder="Enter created date" id="candidate_created_date" required>
